Fixed page heigh calculations
- Taken the height of the navbar into account when centering elements vertically

- Fixed bug with the alert dismisss button not showing the alert again if it had been dismissed previously

--- a/src/app/components/login-screen/login-screen.component.css
+++ b/src/app/components/login-screen/login-screen.component.css
@@ -1,12 +1,12 @@
 .fill-screen { 
-    min-height: 100%;
-    min-height: 100vh;
-    height: 100%;
+    min-height: calc(100% - 56px);
+    min-height: calc(100vh - 56px);
+    height: calc(100vh - 56px);
 }
 
 .vertical-center {
-    min-height: 100%;
-    min-height: 100vh;
+    min-height: calc(100% - 56px);
+    min-height: calc(100vh - 56px);
     
     display: flex;
     align-items: center;
